[package]
name = "lis3dh-async"
description = "An embedded-hal-async driver for the LIS3DH accelerometer"
version = "0.9.2"
license = "Apache-2.0 OR MIT"
authors = [
    "Benjamin Bergman <ben@benbergman.ca>",
    "Paul Sajna <sajattack@gmail.com>",
    "Jesse Braham <jesse@beta7.io>",
    "Folkert de Vries <folkert@folkertdev.nl>",
    "Dion Dokter <diondokter@gmail.com>",
]
keywords = [
    "embedded-hal-driver",
    "accelerometer",
]
repository = "https://github.com/diondokter/lis3dh-rs-async"
edition = "2021"
rust-version = "1.65"

[dependencies]
accelerometer = "~0.12"
embedded-hal-async = "1.0.0"
num_enum = { version = "0.7", default-features = false }
defmt = { version = "0.3", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
